# lazy-filer.nvim

./: Cargo.toml  README.md
.cargo/: config.toml
lazy-filer.rs/: Cargo.toml
lazy-filer.rs/src/: fs.rs  lib.rs  main.rs  states.rs
lazy-filer.rs/src/actions/: create_entry.rs  delete_entry.rs  expand_dir.rs  get_dir.rs  get_file_path.rs  item.rs  mod.rs  move_to_parent.rs  new_filer.rs  open_file.rs  open_or_expand.rs  refresh.rs  rename_entry.rs  renderer.rs  utils.rs
lua/lazy-filer/: call_lib.lua  call_lua.lua  filer_win.lua  highlight.lua  init.lua  namespace.lua  states.lua  subwin.lua
