[package]
name = "lazy-filer-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lazy-filer"
path = "src/main.rs"

[dependencies]
# nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
nvim-rs = { git = " https://github.com/KillTheMule/nvim-rs", branch = "master", features = ["use_tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
