[package]
name = "lazy-filer-rs"
version = "0.1.5"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = ["process", "user"] }
nvim-router = { git = "https://github.com/naughie/nvim-router.rs.git", branch = "main", features = ["tokio"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
